package LSP_respecte;

public interface Duck
{
    void quack();
    void swim();
}
