@startuml
interface Duck {
  + quack(): void
  + swim(): void
}

class RealDuck implements Duck {
  + quack(): void
  + swim(): void
}

class ElectronicDuck implements Duck {
  + quack(): void
  + swim(): void
  + turnOn(): void
  + turnOff(): void
  - _on: boolean
}

Duck <|.. RealDuck
Duck <|.. ElectronicDuck

class Pool {
  + run(): void
  - quack(ducks: Duck[]): void
  - swim(ducks: Duck[]): void
}

Pool --> Duck
@enduml
